patch = { crates-io = { linked_list_allocator = { path = 'C:\Users\zac\.rhack\linked_list_allocator-0.10.5' } } }
[package]
name = "opvm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
paste = "1.0.11"
chrono = "*"
linked_list_allocator = "0.10.5"
